--- a/projects/index.html
+++ b/projects/index.html
@@ -1,7 +1,9 @@
 ---
-layout: page
-title: Blog
-subtitle: Not so random thoughts of an IR researcher involved in the massive open online learning movement ...
+layout: home
+title: Projects
+subtitle: Projects I deemed worthy to showcase!
+permalink: /projects/
+paginate: 5
 ---
 <meta property="og:image" content="{{ post.thumbnail }}">
 
