--- a/projects/index.html
+++ b/projects/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
 title: Projects
-subtitle: Projects I deemed worthy to showcase!
+subtitle: Worhty projects to showcase !
 permalink: /projects/
 paginate: 5
 ---
