--- a/projects/index.html
+++ b/projects/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
 title: Projects
-subtitle: Worhty projects to showcase !
+subtitle: Worthy internship and academic projects !
 permalink: /projects/
 paginate: 5
 ---
